--- a/remote-release-notes/css/inproduct_releasenotes.css
+++ b/remote-release-notes/css/inproduct_releasenotes.css
@@ -8,6 +8,15 @@ body {
     max-width: 980px;
 }
 
+body.vscode-dark,
+body.vscode-high-contrast {
+    color-scheme: dark;
+}
+
+body.vscode-light {
+    color-scheme: light;
+}
+
 #scroll-to-top {
     position: fixed;
     width: 40px;
